--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    font-family: sans-serif;
+    color: white;
+}
+
 body {
     background-color: #0D0D1D;
 }
@@ -11,6 +16,228 @@ body {
     box-shadow: rgba(254, 254, 255, 0.2) 0px 7px 29px 0px;
 }
 
+#Head {
+    text-align: center;
+    padding-top: 10%;
+}
+
+#Head h2 {
+    text-align: end;
+    margin-right: 20%;
+    font-size: 3em;
+}
+
+#mountains {
+    background-color: #252547;
+    height: 400px;
+    width: 100px;
+    overflow: hidden;
+}
+
+.sun {
+	width: 75px;
+	height: 75px;
+    margin-left: 10%;
+    position: absolute;
+	background-color: #FFDE00;
+	border-radius: 50%;
+	box-shadow:
+		0 0 0 10px #FFDE0080,
+		0 0 0 20px #FFDE0040,
+		0 0 0 30px #FFDE0020,
+		0 0 0 40px #FFDE0010,
+		0 0 0 50px #FFDE0000,
+		0 0 20px 50px #FFDE0010;
+	animation:
+		sunrise 2s infinite linear forwards,
+		rays 2s 2s infinite linear;
+}
+
+@keyframes sunrise {
+	0% {
+		box-shadow: none;
+	}
+}
+
+@keyframes rays {
+	0% {
+		box-shadow: 
+		0 0 0 0 #FFDE0080,
+		0 0 0 10px #FFDE0080,
+		0 0 0 20px #FFDE0040,
+		0 0 0 30px #FFDE0020,
+		0 0 0 40px #FFDE0010,
+		0 0 20px 50px #FFDE0010;
+	}
+	100% {
+		box-shadow: 
+		0 0 0 10px #FFDE0080,
+		0 0 0 20px #FFDE0040,
+		0 0 0 30px #FFDE0020,
+		0 0 0 40px #FFDE0010,
+		0 0 0 50px #FFDE0000,
+		0 0 20px 50px #FFDE0010;
+	}
+}
+
+#background-wrap {
+    bottom: 0;
+	left: 0;
+	padding-top: 50px;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: -1;
+}
+
+/* KEYFRAMES */
+
+@-webkit-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@-moz-keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+@keyframes animateCloud {
+    0% {
+        margin-left: -1000px;
+    }
+    100% {
+        margin-left: 100%;
+    }
+}
+
+/* ANIMATIONS */
+
+.x1 {
+	-webkit-animation: animateCloud 35s linear infinite;
+	-moz-animation: animateCloud 35s linear infinite;
+	animation: animateCloud 35s linear infinite;
+	
+	-webkit-transform: scale(0.65);
+	-moz-transform: scale(0.65);
+	transform: scale(0.65);
+}
+
+.x2 {
+	-webkit-animation: animateCloud 20s linear infinite;
+	-moz-animation: animateCloud 20s linear infinite;
+	animation: animateCloud 20s linear infinite;
+	
+	-webkit-transform: scale(0.3);
+	-moz-transform: scale(0.3);
+	transform: scale(0.3);
+}
+
+.x3 {
+	-webkit-animation: animateCloud 30s linear infinite;
+	-moz-animation: animateCloud 30s linear infinite;
+	animation: animateCloud 30s linear infinite;
+	
+	-webkit-transform: scale(0.5);
+	-moz-transform: scale(0.5);
+	transform: scale(0.5);
+}
+
+.x4 {
+	-webkit-animation: animateCloud 18s linear infinite;
+	-moz-animation: animateCloud 18s linear infinite;
+	animation: animateCloud 18s linear infinite;
+	
+	-webkit-transform: scale(0.4);
+	-moz-transform: scale(0.4);
+	transform: scale(0.4);
+}
+
+.x5 {
+	-webkit-animation: animateCloud 25s linear infinite;
+	-moz-animation: animateCloud 25s linear infinite;
+	animation: animateCloud 25s linear infinite;
+	
+	-webkit-transform: scale(0.55);
+	-moz-transform: scale(0.55);
+	transform: scale(0.55);
+}
+
+/* OBJECTS */
+
+.cloud {
+	background: #fff;
+	background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
+	background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
+	
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
+	
+	-webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	-moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
+
+	height: 120px;
+	position: relative;
+	width: 350px;
+}
+
+.cloud:after, .cloud:before {
+    background: #fff;
+	content: '';
+	position: absolute;
+	z-indeX: -1;
+}
+
+.cloud:after {
+	-webkit-border-radius: 100px;
+	-moz-border-radius: 100px;
+	border-radius: 100px;
+
+	height: 100px;
+	left: 50px;
+	top: -50px;
+	width: 100px;
+}
+
+.cloud:before {
+	-webkit-border-radius: 200px;
+	-moz-border-radius: 200px;
+	border-radius: 200px;
+
+	width: 180px;
+	height: 180px;
+	right: 50px;
+	top: -90px;
+}
+
+@media screen and (max-width: 600px) {
+    #background-wrap {
+        margin-top: 40%;
+        z-index: 0;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    .sun {
+        margin-left: 6%;
+    }
+}
+
 @media screen and (min-width: 650px) {
     #Meteo {
         width: 500px;
@@ -22,11 +249,21 @@ body {
         height: 800px;
         width: 600px;
     }
+
+    .sun {
+        height: 100px;
+        width: 100px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
     #Meteo {
         height: 800px;
         width: 700px;
+    }
+
+    .sun {
+        margin-left: 5%;
+        margin-top: 2%;
     }
 }
